feat: Update DTOs to use specific DTO classes for related entities