@@ -2,6 +2,7 @@ package com.adm.imoveis.dto;
 
 import com.adm.imoveis.entities.Imobiliaria;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class DtoUtils {
     public static ImobiliariaDto imobiliariaModelToDto(Imobiliaria imobiliaria) {
@@ -15,6 +16,6 @@ public class DtoUtils {
      * @return                  a list of ImobiliariaDto objects
      */
     public static List<ImobiliariaDto> imobiliariaModelListtoDtoList(List<Imobiliaria> imobiliariaList) {
-        return imobiliariaList.stream().map((i) -> new ImobiliariaDto(i.getId(), i.getNome())).toList();
+        return imobiliariaList.stream().map((i) -> new ImobiliariaDto(i.getId(), i.getNome())).collect(Collectors.toList());
     }
 }
